5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3993/executions/1573_1332.log
== TEST (2019-03-11 15:31:49) 
-- CODE:
aresta =5
area = 3/2*(3*5**2)**0.5
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:31:52) 
-- CODE:
aresta =5
area = 3/2*(3*5**2)**0.5
 
print(round(area, 4))
-- EXECUTION TIME:
0.141176
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:33:24) 
-- CODE:
aresta =5
area = 3/2*3*(5)**2
 
print(round(area, 4))
-- OUTPUT:
112.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:33:35) 
-- CODE:
aresta =5
area = 3/2*3*(5)**2
 
print(round(area,112.5, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(area,112.5, 4))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:34:19) 
-- CODE:
aresta =5
area = 3/2*3*(5)**2
 
print(round(112.5, 4))
-- OUTPUT:
112.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:34:22) 
-- CODE:
aresta =5
area = 3/2*3*(5)**2
 
print(round(112.5, 4))
-- EXECUTION TIME:
0.147188
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
112.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:35:24) 
-- CODE:
aresta =5
area = 3/2*3*(5)**2
 
print(round(64.95, 4))
-- OUTPUT:
64.95
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:35:27) 
-- CODE:
aresta =5
area = 3/2*3*(5)**2
 
print(round(64.95, 4))
-- EXECUTION TIME:
0.130586
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.95
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:37:51) 
-- CODE:
aresta =5
area = (3&2*(3)**0.5
 
print(round(
-- ERROR:
File "XXXX", line 4
    print(round(
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:41:17) 
-- CODE:
aresta =5
area = 3/2*(3*5**2)**0.5
 
print(round(
-- ERROR:
File "XXXX", line 5
    
                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:42:26) 
-- CODE:
aresta =5
area = 32(√3*5**2)**0.5
 
print(round(
-- ERROR:
File "XXXX", line 2
    area = 32(√3*5**2)**0.5
               ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:42:52) 
-- CODE:
aresta =5
area = 3/2(√3*5**2)**0.5
 
print(round(
-- ERROR:
File "XXXX", line 2
    area = 3/2(√3*5**2)**0.5
                ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:45:07) 
-- CODE:
aresta =5
area = 3/2*(3*5**2)**0.5
 
print(round(
-- ERROR:
File "XXXX", line 5
    
                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:45:22) 
-- CODE:
aresta =5
area = 3/2*((3*5**2)**0.5)
 
print(round(
-- ERROR:
File "XXXX", line 5
    
                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:49:00) 
-- CODE:
aresta =5
area = 3/2*(3)**0.5(5**2)
 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = 3/2*(3)**0.5(5**2)
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:49:17) 
-- CODE:
aresta =5
area = 3/2*(3)**0.5*(5**2)
 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = 3/2*(3)**0.5(5**2)
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:49:35) 
-- CODE:
aresta =5
area = 3/2*((3)**0.5*(5**2)
 
-- ERROR:
File "XXXX", line 4
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:50:14) 
-- CODE:
aresta =5
area = 3/2*((3)**0.5*(5**2)
 print(round(area ,4))
-- ERROR:
File "XXXX", line 3
    print(round(area ,4))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:50:26) 
-- CODE:
aresta =5
area = 3/2*((3)**0.5*(5**2)
 print((round(area ,4))
-- ERROR:
File "XXXX", line 3
    print((round(area ,4))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:51:40) 
-- CODE:
aresta =5
area = 3/2*(3**0.5)*(5**2)
 print((round(area ,4))
-- ERROR:
File "XXXX", line 3
    print((round(area ,4))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:52:49) 
-- CODE:
aresta =5
area = 3/2*(3**0.5)*(5**2)
print((round(area ,4))
-- ERROR:
File "XXXX", line 4
    
                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:53:03) 
-- CODE:
aresta =5
area = 3/2*3**0.5*5**2
print((round(area ,4))
-- ERROR:
File "XXXX", line 4
    
                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:53:38) 
-- CODE:
aresta =5
area =3/2*3**0.5*5**2
print((round(area ,4))
-- ERROR:
File "XXXX", line 4
    
                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:54:04) 
-- CODE:
aresta =5
area =3/2*3**0.5*5**2
print((round(area ,4))
		
-- ERROR:
File "XXXX", line 5
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:59:22) 
-- CODE:
aresta =5
area =3/2*3**0.5*5**2

print((round(area ,4))
		
-- ERROR:
File "XXXX", line 6
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:46:30) 
-- CODE:
aresta = 5
area =3/2*(3)**0.5*(5)**2

print((round(area ,4))
		
-- ERROR:
File "XXXX", line 6
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:46:34) 
-- CODE:
aresta = 5
area =3/2*(3)**0.5*(5)**2

print((round(area ,4))
		
-- EXECUTION TIME:
0.21583
-- ERROR:
  File "/home/codebench/codes/1573/1332/main.py", line 6
    
      ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:47:41) 
-- CODE:
aresta = 5
area =3/2*(3)**0.5*(5)**2

print(round(area ,4))
		
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:47:50) 
-- CODE:
aresta = 5
area =3/2*(3)**0.5*(5)**2

print(round(area ,4))
		
-- EXECUTION TIME:
0.288407
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
